<?xml version="1.0"?>
<package format="3">
  <name>px4_formation</name>
  <version>0.0.1</version>
  <description>ROS2 package for PX4 multi-UAV formation using MAVSDK and Gazebo</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mavsdk</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mavsdk</exec_depend>
</package>
